MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/Gestion_Comercial__c.object-meta.xml
<CustomObject>
    <label>Gestion Comercial</label>
    <nameField>
        <displayFormat>GC-{0000000}</displayFormat>
        <label>ID Gestion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gestiones Comerciales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>