MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/A_demanda__c.field-meta.xml
<CustomField>
    <fullName>A_demanda__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A demanda</label>
    <type>Checkbox</type>
</CustomField>