MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Ajuste_de_Horas__c.field-meta.xml
<CustomField>
    <fullName>Ajuste_de_Horas__c</fullName>
    <inlineHelpText>Indique un ajuste de horas por conceptos como facturación de saldo, pago de horas extras, uso de horas de arrastre, etc, que afecten directamente al saldo del mes</inlineHelpText>
    <label>Abono/Debito de horas</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>