MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Base_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Base_Mensual__c</fullName>
    <label>Base Mensual</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>