MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <label>HH por Demanda</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>