MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Ciclo_AMS__c.field-meta.xml
<CustomField>
    <fullName>Ciclo_AMS__c</fullName>
    <formula>TEXT(Cliente__r.Ciclo_de_Facturaci_n_AMS__c)</formula>
    <label>Ciclo de Facturación AMS</label>
    <type>Text</type>
</CustomField>