MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Cierre_Efecutado__c.field-meta.xml
<CustomField>
    <fullName>Cierre_Efecutado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cierre Efecutado</label>
    <type>Checkbox</type>
</CustomField>