MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gestiones Comerciales</relationshipLabel>
    <relationshipName>Gestiones_Comerciales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>