MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Cliente_seidor__c.field-meta.xml
<CustomField>
    <fullName>Cliente_seidor__c</fullName>
    <label>Cliente seidor</label>
    <length>12</length>
    <type>Text</type>
</CustomField>