MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Cometario__c.field-meta.xml
<CustomField>
    <fullName>Cometario__c</fullName>
    <label>Comentario</label>
    <length>40</length>
    <type>Text</type>
</CustomField>