MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Consumo_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Consumo_Mensual__c</fullName>
    <label>Consumo Mensual</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>