MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Contacto_grupoInterlocutor__c.field-meta.xml
<CustomField>
    <fullName>Contacto_grupoInterlocutor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto grupo asociado</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gestiones Comerciales (Contacto grupo asociado)</relationshipLabel>
    <relationshipName>Gestiones_Comerciales1</relationshipName>
    <type>Lookup</type>
</CustomField>