MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Contacto_Interlocutor__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Interlocutor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto asociado</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gestiones Comerciales</relationshipLabel>
    <relationshipName>Gestiones_Comerciales</relationshipName>
    <type>Lookup</type>
</CustomField>