MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/DenPosicin2__c.field-meta.xml
<CustomField>
    <fullName>DenPosicin2__c</fullName>
    <label>Descripcion 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>