MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/DenPosicin3__c.field-meta.xml
<CustomField>
    <fullName>DenPosicin3__c</fullName>
    <label>Descripcion 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>