MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/DenPosicin__c.field-meta.xml
<CustomField>
    <fullName>DenPosicin__c</fullName>
    <label>Descripcion</label>
    <length>80</length>
    <type>Text</type>
</CustomField>