MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/DenProveedor__c.field-meta.xml
<CustomField>
    <fullName>DenProveedor__c</fullName>
    <label>Den.Proveedor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>