MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Dias_de_vigencia__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_vigencia__c</fullName>
    <formula>Vigencia_de_Provision__c  -  today ()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de vigencia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>