MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Division2__c.field-meta.xml
<CustomField>
    <fullName>Division2__c</fullName>
    <label>Division2</label>
    <length>4</length>
    <type>Text</type>
</CustomField>