MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Division3__c.field-meta.xml
<CustomField>
    <fullName>Division3__c</fullName>
    <label>Division3</label>
    <length>4</length>
    <type>Text</type>
</CustomField>