MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Division_Destino__c.field-meta.xml
<CustomField>
    <fullName>Division_Destino__c</fullName>
    <label>Division Destino</label>
    <length>4</length>
    <type>Text</type>
</CustomField>