MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Enlace_a_Detalle_ultimo_mes__c.field-meta.xml
<CustomField>
    <fullName>Enlace_a_Detalle_ultimo_mes__c</fullName>
    <formula>Cliente__r.Link_Detalle_Ultimo_Mes__c</formula>
    <label>Enlace a Detalle ultimo mes</label>
    <type>Text</type>
</CustomField>