MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Enlace_a_Estado_de_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Enlace_a_Estado_de_Cuenta__c</fullName>
    <formula>Cliente__r.Link_Estado_Cuenta__c</formula>
    <label>Enlace a Estado de Cuenta</label>
    <type>Text</type>
</CustomField>