MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Enviado_a_cliente__c.field-meta.xml
<CustomField>
    <fullName>Enviado_a_cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado a cliente</label>
    <type>Checkbox</type>
</CustomField>