MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Enviado_a_facturar_el__c.field-meta.xml
<CustomField>
    <fullName>Enviado_a_facturar_el__c</fullName>
    <label>Enviado a facturar el</label>
    <type>DateTime</type>
</CustomField>