MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Enviado_a_reversa__c.field-meta.xml
<CustomField>
    <fullName>Enviado_a_reversa__c</fullName>
    <label>Enviado a reversa el</label>
    <type>DateTime</type>
</CustomField>