MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Enviado_al_cliente_el__c.field-meta.xml
<CustomField>
    <fullName>Enviado_al_cliente_el__c</fullName>
    <label>Enviado al cliente el</label>
    <type>DateTime</type>
</CustomField>