MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Enviado_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Enviado_Proveedor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado Proveedor</label>
    <type>Checkbox</type>
</CustomField>