MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Error_Envio__c.field-meta.xml
<CustomField>
    <fullName>Error_Envio__c</fullName>
    <label>Error Envio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>