MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Estatus_del_cierre__c.field-meta.xml
<CustomField>
    <fullName>Estatus_del_cierre__c</fullName>
    <label>Estatus del cierre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por Iniciar</fullName>
                <default>true</default>
                <label>Por Iniciar</label>
            </value>
            <value>
                <fullName>En Confección</fullName>
                <label>Confección Admin.</label>
            </value>
            <value>
                <fullName>Revision GS</fullName>
            </value>
            <value>
                <fullName>Enviado a Cliente</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>