MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Estatus_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Facturacion__c</fullName>
    <label>Estatus Facturacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inicial</fullName>
                <default>true</default>
                <label>Inicial</label>
            </value>
            <value>
                <fullName>Solicitud o Confirmacion</fullName>
            </value>
            <value>
                <fullName>Provisionado</fullName>
            </value>
            <value>
                <fullName>Enviado a Facturar</fullName>
            </value>
            <value>
                <fullName>Facturado</fullName>
            </value>
            <value>
                <fullName>Solicitud de Reversa</fullName>
            </value>
            <value>
                <fullName>Culminado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>