MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Estatus_Pago_P__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Pago_P__c</fullName>
    <formula>IF( Pag__c = TRUE, &apos; Pagado &apos;, &apos;Por Pagar&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Pago Proveedor</label>
    <type>Text</type>
</CustomField>