MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Estatus_Reconcimiento__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Reconcimiento__c</fullName>
    <formula>IF( Rec__c = true,&apos;Reconocido&apos;, &apos;Pendiente&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus Reconcimiento</label>
    <type>Text</type>
</CustomField>