MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Exclusion_N1__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_N1__c</fullName>
    <formula>Cliente__r.ZAMS_Exclusion_N1__c</formula>
    <label>Exclusion N1</label>
    <type>Checkbox</type>
</CustomField>