MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fact__c.field-meta.xml
<CustomField>
    <fullName>Fact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturado</label>
    <type>Checkbox</type>
</CustomField>