MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fact_Extra__c.field-meta.xml
<CustomField>
    <fullName>Fact_Extra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fact. Extra</label>
    <type>Checkbox</type>
</CustomField>