MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fecha_Envio_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Envio_Proveedor__c</fullName>
    <label>Fecha Envio OC</label>
    <type>Date</type>
</CustomField>