MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fecha_Facturacin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Facturacin__c</fullName>
    <label>Fecha Facturación</label>
    <type>Date</type>
</CustomField>