MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fecha_Fin_Ciclo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin_Ciclo__c</fullName>
    <formula>IF(
  ISBLANK(Fecha_Prevista__c),
  NULL,
  CASE(
    Ciclo_AMS__c,
    &quot;Mes Calendario&quot;,
      DATE( YEAR(Fecha_Prevista__c), MONTH(Fecha_Prevista__c) + 1, 1 ) - 1,

    &quot;Dia 15&quot;,
      DATE( YEAR(Fecha_Prevista__c), MONTH(Fecha_Prevista__c), 15),

    &quot;Dia 25&quot;,
      DATE( YEAR(Fecha_Prevista__c), MONTH(Fecha_Prevista__c), 25),

    /* default: Mes Calendario */
    DATE( YEAR(Fecha_Prevista__c), MONTH(Fecha_Prevista__c) + 1, 1 ) - 1
  )
)</formula>
    <label>Fecha Fin Ciclo</label>
    <type>Date</type>
</CustomField>