MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fecha_Inicio_Ciclo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Ciclo__c</fullName>
    <formula>IF(
  ISBLANK(Fecha_Prevista__c),
  NULL,
  CASE(
    Ciclo_AMS__c,
    &quot;Mes Calendario&quot;,
      DATE( YEAR(Fecha_Prevista__c), MONTH(Fecha_Prevista__c), 1),

    &quot;Dia 15&quot;,
      DATE(
        YEAR( ADDMONTHS(Fecha_Prevista__c, -1) ),
        MONTH( ADDMONTHS(Fecha_Prevista__c, -1) ),
        16
      ),

    &quot;Dia 25&quot;,
      DATE(
        YEAR( ADDMONTHS(Fecha_Prevista__c, -1) ),
        MONTH( ADDMONTHS(Fecha_Prevista__c, -1) ),
        26
      ),

    /* default: Mes Calendario */
    DATE( YEAR(Fecha_Prevista__c), MONTH(Fecha_Prevista__c), 1)
  )
)</formula>
    <label>Fecha Inicio Ciclo</label>
    <type>Date</type>
</CustomField>