MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fecha_OC_Seidor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_OC_Seidor__c</fullName>
    <label>Fecha OC Seidor</label>
    <type>Date</type>
</CustomField>