MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fecha_Pago_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Pago_Proveedor__c</fullName>
    <label>Fecha Pago</label>
    <type>Date</type>
</CustomField>