MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fecha_Prevista__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Prevista__c</fullName>
    <label>Fecha Prevista</label>
    <required>true</required>
    <type>Date</type>
</CustomField>