MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fecha_Provision__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Provision__c</fullName>
    <label>Fecha Provision</label>
    <type>Date</type>
</CustomField>