MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fecha_Recon__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Recon__c</fullName>
    <label>Fecha Recon.</label>
    <type>Date</type>
</CustomField>