MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fecha_Refacturacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Refacturacion__c</fullName>
    <label>Fecha Refactura.</label>
    <type>Date</type>
</CustomField>