MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fecha_Reversa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reversa__c</fullName>
    <label>Fecha Reversa</label>
    <type>Date</type>
</CustomField>