MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Fecha_Ultimo_Reporte_Finanzas__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultimo_Reporte_Finanzas__c</fullName>
    <label>Fecha Ultimo Reporte Finanzas</label>
    <type>Date</type>
</CustomField>