MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Folio2__c.field-meta.xml
<CustomField>
    <fullName>Folio2__c</fullName>
    <label>Folio2</label>
    <length>14</length>
    <type>Text</type>
</CustomField>