MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Folio3__c.field-meta.xml
<CustomField>
    <fullName>Folio3__c</fullName>
    <label>Folio3</label>
    <length>15</length>
    <type>Text</type>
</CustomField>