MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Folio__c.field-meta.xml
<CustomField>
    <fullName>Folio__c</fullName>
    <label>Folio</label>
    <length>12</length>
    <type>Text</type>
</CustomField>