MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Glosa_Factura__c.field-meta.xml
<CustomField>
    <fullName>Glosa_Factura__c</fullName>
    <formula>IF((AND( Fact__c = False, Prov__c = False)),&apos;FACTURAR&apos;,&apos;&apos;)</formula>
    <label>Glosa Factura</label>
    <type>Text</type>
</CustomField>