MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Glosa_Provision__c.field-meta.xml
<CustomField>
    <fullName>Glosa_Provision__c</fullName>
    <formula>IF((AND( Prov__c = True, RevP__c = False,  Fact__c = False)),&apos;PROVISIONAR&apos;,&apos;&apos;)</formula>
    <label>Glosa Provision</label>
    <type>Text</type>
</CustomField>