MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Glosa_Reconocimento1__c.field-meta.xml
<CustomField>
    <fullName>Glosa_Reconocimento1__c</fullName>
    <formula>&apos;Desde la división&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen Reconocimiento</label>
    <type>Text</type>
</CustomField>