MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Glosa_Reconocimento__c.field-meta.xml
<CustomField>
    <fullName>Glosa_Reconocimento__c</fullName>
    <formula>&apos;Reconoce a la division -&gt;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destino Reconocimiento</label>
    <type>Text</type>
</CustomField>