MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Glosa_ReversaP__c.field-meta.xml
<CustomField>
    <fullName>Glosa_ReversaP__c</fullName>
    <formula>&apos;Reversar Provision/Factura Emitida&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Glosa Reversa</label>
    <type>Text</type>
</CustomField>