MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Grupo_AMS__c.field-meta.xml
<CustomField>
    <fullName>Grupo_AMS__c</fullName>
    <formula>TEXT(Cliente__r.Grupo_AMS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo AMS</label>
    <type>Text</type>
</CustomField>