MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/HES2__c.field-meta.xml
<CustomField>
    <fullName>HES2__c</fullName>
    <label>HES2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>