MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/HES3__c.field-meta.xml
<CustomField>
    <fullName>HES3__c</fullName>
    <label>HES3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>