MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/HES__c.field-meta.xml
<CustomField>
    <fullName>HES__c</fullName>
    <label>HES</label>
    <length>10</length>
    <type>Text</type>
</CustomField>