MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/HH_Consumidas__c.field-meta.xml
<CustomField>
    <fullName>HH_Consumidas__c</fullName>
    <label>HH Consumidas</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>