MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/ID_Reporte_Detalle_Ultimo_mes__c.field-meta.xml
<CustomField>
    <fullName>ID_Reporte_Detalle_Ultimo_mes__c</fullName>
    <label>ID Reporte Detalle Ultimo mes</label>
    <length>18</length>
    <type>Text</type>
</CustomField>