MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/ID_Reporte_EC__c.field-meta.xml
<CustomField>
    <fullName>ID_Reporte_EC__c</fullName>
    <formula>IF(
  LEFT( Cliente__r.Link_Estado_Cuenta__c ,3) = &quot;00O&quot;,
  LEFT(Cliente__r.Link_Estado_Cuenta__c,18),
  MID(Cliente__r.Link_Estado_Cuenta__c, FIND(&quot;/00O&quot;, Cliente__r.Link_Estado_Cuenta__c)+1, 18)
)</formula>
    <label>ID Reporte EC</label>
    <type>Text</type>
</CustomField>