MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/ID_Reporte_Estado_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>ID_Reporte_Estado_Cuenta__c</fullName>
    <label>ID Reporte Estado Cuenta</label>
    <length>18</length>
    <type>Text</type>
</CustomField>