MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/IDGC__c.field-meta.xml
<CustomField>
    <fullName>IDGC__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDGC</label>
    <type>Text</type>
</CustomField>