MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Importe__c.field-meta.xml
<CustomField>
    <fullName>Importe__c</fullName>
    <formula>HH_Consumidas__c   * Tarifa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>