MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Imputaciones_del_Mes__c.field-meta.xml
<CustomField>
    <fullName>Imputaciones_del_Mes__c</fullName>
    <description>Campo para dlrs de imputaciones facturables del mes</description>
    <label>Imputaciones del Mes</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>