MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Ingresado_a_Provisi_n__c.field-meta.xml
<CustomField>
    <fullName>Ingresado_a_Provisi_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ingresado a Provisión</label>
    <type>Checkbox</type>
</CustomField>