MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Intentos_Envio__c.field-meta.xml
<CustomField>
    <fullName>Intentos_Envio__c</fullName>
    <label>Intentos Envio</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>