MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Lista_de_correo_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_correo_Facturacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de correo Facturacion</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Lista_de_correo__c.Tipo_de_Operacion__c</field>
            <operation>equals</operation>
            <value>Facturacion</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lista_de_correo__c</referenceTo>
    <relationshipLabel>Gestiones Comerciales</relationshipLabel>
    <relationshipName>Gestiones_Comerciales</relationshipName>
    <type>Lookup</type>
</CustomField>