MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Logo_url__c.field-meta.xml
<CustomField>
    <fullName>Logo_url__c</fullName>
    <formula>Cliente__r.Logo_Cliente__c</formula>
    <label>Logo_url</label>
    <type>Text</type>
</CustomField>