MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Materia2__c.field-meta.xml
<CustomField>
    <fullName>Materia2__c</fullName>
    <label>Material o Servicio2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>