MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Materia3__c.field-meta.xml
<CustomField>
    <fullName>Materia3__c</fullName>
    <label>Material o Servicio3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>