MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Moneda_Txt__c.field-meta.xml
<CustomField>
    <fullName>Moneda_Txt__c</fullName>
    <formula>TEXT( Moneda__c )</formula>
    <label>MonedaTxt</label>
    <type>Text</type>
</CustomField>