MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Motivo_Ajuste__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Ajuste__c</fullName>
    <inlineHelpText>Indique el motivo por el que debe ajustar las horas (pago de sobreconsuno, uso de saldo, regularización, etc)</inlineHelpText>
    <label>Motivo Ajuste</label>
    <length>60</length>
    <type>Text</type>
</CustomField>