MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/N_Cliente_Seidor__c.field-meta.xml
<CustomField>
    <fullName>N_Cliente_Seidor__c</fullName>
    <formula>Cliente__r.No_Cliente_Seidor__c</formula>
    <label>N.Cliente Seidor</label>
    <type>Text</type>
</CustomField>