MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Notificaci_n_reversa__c.field-meta.xml
<CustomField>
    <fullName>Notificaci_n_reversa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificación reversa</label>
    <type>Checkbox</type>
</CustomField>