MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Notificado_a_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Notificado_a_Cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificado a Cliente</label>
    <type>Checkbox</type>
</CustomField>