MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Notificado_a_Facturar__c.field-meta.xml
<CustomField>
    <fullName>Notificado_a_Facturar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificado a Facturar</label>
    <type>Checkbox</type>
</CustomField>