MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Numero_de_Posiciones__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Posiciones__c</fullName>
    <label>Numero de Posiciones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>