MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Observaciones_del_Mes__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_del_Mes__c</fullName>
    <label>Observaciones del Mes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>