MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/OC_Cliente2__c.field-meta.xml
<CustomField>
    <fullName>OC_Cliente2__c</fullName>
    <label>OC Cliente2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>