MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/OC_Cliente3__c.field-meta.xml
<CustomField>
    <fullName>OC_Cliente3__c</fullName>
    <label>OC Cliente3</label>
    <length>12</length>
    <type>Text</type>
</CustomField>