MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/OC_Cliente__c.field-meta.xml
<CustomField>
    <fullName>OC_Cliente__c</fullName>
    <label>OC Cliente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>