MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/OC_Seidor__c.field-meta.xml
<CustomField>
    <fullName>OC_Seidor__c</fullName>
    <label>OC Seidor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>