MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/OrgVenta__c.field-meta.xml
<CustomField>
    <fullName>OrgVenta__c</fullName>
    <label>Org.Venta</label>
    <length>4</length>
    <type>Text</type>
</CustomField>