MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Pag__c.field-meta.xml
<CustomField>
    <fullName>Pag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pagado</label>
    <type>Checkbox</type>
</CustomField>