MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/Pedido_V3__c.field-meta.xml
<CustomField>
    <fullName>Pedido_V3__c</fullName>
    <label>Pedido V3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>