MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/PEP2__c.field-meta.xml
<CustomField>
    <fullName>PEP2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PEP2</label>
    <referenceTo>PEP__c</referenceTo>
    <relationshipLabel>Gestiones Comerciales (PEP2)</relationshipLabel>
    <relationshipName>Gestiones_Comerciales2</relationshipName>
    <type>Lookup</type>
</CustomField>