MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/PEP3__c.field-meta.xml
<CustomField>
    <fullName>PEP3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PEP3</label>
    <referenceTo>PEP__c</referenceTo>
    <relationshipLabel>Gestiones Comerciales (PEP3)</relationshipLabel>
    <relationshipName>Gestiones_Comerciales3</relationshipName>
    <type>Lookup</type>
</CustomField>