MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/PEP__c.field-meta.xml
<CustomField>
    <fullName>PEP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PEP</label>
    <referenceTo>PEP__c</referenceTo>
    <relationshipLabel>Gestiones Comerciales</relationshipLabel>
    <relationshipName>Gestiones_Comerciales</relationshipName>
    <type>Lookup</type>
</CustomField>