MigracionObjeto/force-app/main/default/objects/Gestion_Comercial__c/fields/PEP_Destino__c.field-meta.xml
<CustomField>
    <fullName>PEP_Destino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PEP Destino</label>
    <referenceTo>PEP__c</referenceTo>
    <relationshipLabel>Gestiones Comerciales (PEP Destino)</relationshipLabel>
    <relationshipName>Gestiones_Comerciales1</relationshipName>
    <type>Lookup</type>
</CustomField>